Minor fixes on alignment of heading

--- a/style.css
+++ b/style.css
@@ -266,6 +266,10 @@ h2 {
         text-align: left;
         margin-bottom: 0px;
     }
+
+    .page-header__main__copy h1{
+        margin-left: unset;
+    }
 }
 /*====================================================================================================*/
 
